<resources>
    <string name="app_name">Tiger Apps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="account_created_successful">Account created successfully!</string>
    <string name="empty_fields">Some fields are empty!</string>
    <string name="passwords_not_matching">Your passwords do not match!</string>
    <string name="home">Home</string>
    <string name="my_apps">My Apps</string>
    <string name="install">Install</string>
    <string name="description">Description</string>

</resources>
