<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:id="@+id/splash_editText_email"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/splash_editText_email"
        android:layout_alignStart="@+id/splash_editText_email"
        android:id="@+id/splash_editText_password"
        android:hint="@string/password"/>

    <Button
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_editText_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:id="@+id/splash_button_login" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/splash_button_login"
        android:layout_toStartOf="@+id/splash_button_login"
        android:layout_marginBottom="25dp"
        android:id="@+id/splash_button_forgot_password" />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/splash_button_forgot_password"
        android:layout_toRightOf="@+id/splash_button_login"
        android:layout_toEndOf="@+id/splash_button_login"
        android:id="@+id/splash_button_create_account" />
</RelativeLayout>