<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Banner-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/app_imageView_banner"
        android:backgroundTint="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--InstallTitle-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left"
                    android:weightSum="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="75sp"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:id="@+id/app_imageView_icon"
                        android:layout_weight=".25" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:id="@+id/app_textView_appName"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:layout_weight=".75"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".9"
                        android:visibility="invisible"
                        android:id="@+id/app_progressBar" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install"
                        android:id="@+id/app_button_install"
                        android:layout_gravity="right"
                        android:layout_weight=".1"/>
                </LinearLayout>


            </LinearLayout>
            <!--Description-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="25dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/app_textView_description"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>